WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282125
Fix bad assert when a DeferredWorkTimer ticket is cancelled as its global object is visiting children
https://bugs.webkit.org/show_bug.cgi?id=282125
Summary
Fix bad assert when a DeferredWorkTimer ticket is cancelled as its global obj...
Keith Miller
Reported
2024-10-25 18:41:27 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-25 18:41:41 PDT
<
rdar://problem/138675242
>
Keith Miller
Comment 2
2024-10-25 18:44:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35748
EWS
Comment 3
2024-10-28 13:19:36 PDT
Committed
285781@main
(9bc2ec09cdb0): <
https://commits.webkit.org/285781@main
> Reviewed commits have been landed. Closing PR #35748 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug