Fix bad assert when a DeferredWorkTimer ticket is cancelled as its global object is visiting children https://bugs.webkit.org/show_bug.cgi?id=282125 rdar://138675242

Reviewed by Yijia Huang and Mark Lam.

The isCancelled check in JSGlobalObject's visitChildren is just an optimization since the mutator is
running while visiting. Thus the ticket could get cancelled between the check and the dependency fetch.
Thus we should just relax the assertion in this case.

* Source/JavaScriptCore/runtime/DeferredWorkTimer.h:
(JSC::DeferredWorkTimer::TicketData::dependencies):
* Source/JavaScriptCore/runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::visitChildrenImpl):

Canonical link: https://commits.webkit.org/285781@main